; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_crypto.c_kull_m_crypto_desx_decrypt.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_crypto.c_kull_m_crypto_desx_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@CALG_DES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kull_m_crypto_desx_decrypt(i32 %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load i32, i32* @FALSE, align 4
  store i32 %12, i32* %9, align 4
  store i32 8, i32* %11, align 4
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* %7, align 8
  %15 = call i32 @RtlCopyMemory(i64 %13, i64 %14, i32 8)
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @CALG_DES, align 4
  %18 = load i64, i64* %6, align 8
  %19 = call i64 @kull_m_crypto_hkey(i32 %16, i32 %17, i64 %18, i32 8, i32 0, i32* %10, i32* null)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %47

21:                                               ; preds = %4
  %22 = load i64, i64* %6, align 8
  %23 = add nsw i64 %22, 16
  %24 = inttoptr i64 %23 to i32*
  %25 = load i32, i32* %24, align 4
  %26 = load i64, i64* %8, align 8
  %27 = inttoptr i64 %26 to i32*
  %28 = load i32, i32* %27, align 4
  %29 = xor i32 %28, %25
  store i32 %29, i32* %27, align 4
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* @FALSE, align 4
  %32 = load i64, i64* %8, align 8
  %33 = call i32 @CryptDecrypt(i32 %30, i32 0, i32 %31, i32 0, i64 %32, i32* %11)
  store i32 %33, i32* %9, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %44

35:                                               ; preds = %21
  %36 = load i64, i64* %6, align 8
  %37 = add nsw i64 %36, 8
  %38 = inttoptr i64 %37 to i32*
  %39 = load i32, i32* %38, align 4
  %40 = load i64, i64* %8, align 8
  %41 = inttoptr i64 %40 to i32*
  %42 = load i32, i32* %41, align 4
  %43 = xor i32 %42, %39
  store i32 %43, i32* %41, align 4
  br label %44

44:                                               ; preds = %35, %21
  %45 = load i32, i32* %10, align 4
  %46 = call i32 @CryptDestroyKey(i32 %45)
  br label %47

47:                                               ; preds = %44, %4
  %48 = load i32, i32* %9, align 4
  ret i32 %48
}

declare dso_local i32 @RtlCopyMemory(i64, i64, i32) #1

declare dso_local i64 @kull_m_crypto_hkey(i32, i32, i64, i32, i32, i32*, i32*) #1

declare dso_local i32 @CryptDecrypt(i32, i32, i32, i32, i64, i32*) #1

declare dso_local i32 @CryptDestroyKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
